fixed horizontal scroll of trending

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -162,8 +162,8 @@ div.trending-overall{
 }
 
 .trending-overall > p{
-    padding-left: 20px;
-    padding-top: 5px;
+    padding-left: 60px;
+    padding-top: 15px;
     color: white;
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -183,7 +183,7 @@ div.trending-products{
 
 .trending-products > figure{
     display: block;
-    width: 300px; /* THIS IS NOT WORKING */
+    min-width: 300px;
 }
 
 .trending-products > figure > div{
@@ -192,11 +192,10 @@ div.trending-products{
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     box-sizing: border-box;
-    width: 100%;
-    margin-top: 0px;
-    padding-top: 5px;
+    margin-top: -20px;
+    padding-top: 25px;
     padding-left: 5px;
-    height: 50px;
+    height: 70px;
 }
 
 .trending-products > figure > div > div{
@@ -205,10 +204,10 @@ div.trending-products{
 }
 
 .trending-products > figure > img{
-    width: 100%;
     height: 200px;
     margin-bottom: 0px;
     border-radius: 10px;
+    min-width: 300px;
 }
 
 .trending-products > figure > div > button{
